Style fixes
variables are used immediately after they are declared